{
    "name": "HeroInputActions",
    "maps": [
        {
            "name": "Hero",
            "id": "82992744-e170-44c7-8d44-edb68fece66a",
            "actions": [
                {
                    "name": "SaySomething",
                    "type": "Button",
                    "id": "40fcc57d-65b0-4c10-aedd-834d55e6f05a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "b6046545-11ee-4b53-970b-dde9faa340ee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa574db1-4eae-4918-8cdd-e6405d6524cf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaySomething",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "c9c984d4-6c0e-40ad-bfc5-7b58b1328fed",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "12ae8cf9-d485-4dd7-941b-0ec546c6f3e7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "07f55784-d1bf-4bf3-b978-4feb2fc17ab0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5e1a5a4e-4366-4f0d-be4d-b9c78d2eea9c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1182ef38-885c-4c0e-8fdd-701576dd14b6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}